--- a/index.html
+++ b/index.html
@@ -1,7 +1,83 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Yuhang Li</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+            line-height: 1.6;
+        }
+        header {
+            text-align: center;
+            padding: 2rem;
+            background-color: #4CAF50;
+            color: white;
+        }
+        header img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            margin-bottom: 1rem;
+        }
+        main {
+            padding: 2rem;
+            max-width: 800px;
+            margin: auto;
+        }
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: #4CAF50;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background-color: #4CAF50;
+            color: white;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        <img src="your-photo.jpg" alt="Yuhang Li's photo">
+        <h1>Yuhang Li</h1>
+        <p>Email: <a href="mailto:your-email@example.com" style="color: white;">your-email@example.com</a></p>
+        <p>Phone: +123-456-7890</p>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="research.html">Research</a>
+            <a href="cv.html">CV</a>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>About Me</h2>
+            <p>Welcome to my academic website! I am a researcher in [Your Field], focusing on [Key Areas of Interest]. My work aims to explore innovative solutions to complex challenges and contribute to advancing knowledge in [Your Field].</p>
+        </section>
+        <section>
+            <h2>Research Interests</h2>
+            <ul>
+                <li>Interest 1</li>
+                <li>Interest 2</li>
+                <li>Interest 3</li>
+                <li>Interest 4</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        &copy; 2024 Yuhang Li
+    </footer>
 </body>
 </html>
