--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f9f9f9;
+            background: url('MVIMG_20230212_180228.jpg') no-repeat center center fixed;
+            background-size: cover;
             color: #333;
             line-height: 1.6;
         }
         header {
             text-align: center;
             padding: 2rem;
-            background-color: #4CAF50;
+            background-color: rgba(76, 175, 80, 0.8); /* Semi-transparent green */
             color: white;
         }
         header img {
@@ -29,11 +30,14 @@
             padding: 2rem;
             max-width: 800px;
             margin: auto;
+            background: rgba(255, 255, 255, 0.9); /* Semi-transparent white */
+            border-radius: 10px;
         }
         nav a {
             margin: 0 15px;
             text-decoration: none;
-            color: #4CAF50;
+            color: #ffffff;
+            font-weight: bold;
         }
         nav a:hover {
             text-decoration: underline;
@@ -41,7 +45,7 @@
         footer {
             text-align: center;
             padding: 1rem;
-            background-color: #4CAF50;
+            background-color: rgba(76, 175, 80, 0.8);
             color: white;
             position: fixed;
             bottom: 0;
