--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 </head>
 <body>
     <header>
-        <img src="your-photo.jpg" alt="Yuhang Li's photo">
+        <img src="examplepng.png" alt="Yuhang Li's photo">
         <h1>Yuhang Li</h1>
-        <p>Email: <a href="mailto:your-email@example.com" style="color: white;">your-email@example.com</a></p>
+        <p>Email: <a href="mailto:trendeleev@outlook.com" style="color: white;">trendeleev@outlook.com</a></p>
         <p>Phone: +123-456-7890</p>
         <nav>
             <a href="index.html">Home</a>
@@ -68,20 +68,19 @@
     <main>
         <section>
             <h2>About Me</h2>
-            <p>Welcome to my academic website! I am a researcher in [Your Field], focusing on [Key Areas of Interest]. My work aims to explore innovative solutions to complex challenges and contribute to advancing knowledge in [Your Field].</p>
+            <p>Welcome to my site! I am a first-year PhD at Utokyo, Graduate School of Economics. .</p>
         </section>
         <section>
             <h2>Research Interests</h2>
             <ul>
-                <li>Interest 1</li>
-                <li>Interest 2</li>
-                <li>Interest 3</li>
-                <li>Interest 4</li>
+                <li>Industrial Organization</li>
+                <li>Environmental/Energy Economics</li>
+                <li>Market Design</li>
             </ul>
         </section>
     </main>
     <footer>
-        &copy; 2024 Yuhang Li
+        &copy; 2024 mishimaaa
     </footer>
 </body>
 </html>
