--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         header {
             text-align: center;
             padding: 2rem;
-            background-color: rgba(76, 175, 80, 0.8); /* Semi-transparent green */
+            background-color: rgba(70, 130, 180, 0.8); /* Semi-transparent blue */
             color: white;
         }
         header img {
@@ -31,7 +31,7 @@
             max-width: 800px;
             margin: auto;
             background: rgba(255, 255, 255, 0.9); /* Semi-transparent white */
-            border-radius: 10px;
+            border-radius: 1px;
         }
         nav a {
             margin: 0 15px;
@@ -45,7 +45,7 @@
         footer {
             text-align: center;
             padding: 1rem;
-            background-color: rgba(76, 175, 80, 0.8);
+            background-color: rgba(70, 130, 180, 0.8);
             color: white;
             position: fixed;
             bottom: 0;
@@ -55,10 +55,8 @@
 </head>
 <body>
     <header>
-        <img src="examplepng.png" alt="Yuhang Li's photo">
         <h1>Yuhang Li</h1>
         <p>Email: <a href="mailto:trendeleev@outlook.com" style="color: white;">trendeleev@outlook.com</a></p>
-        <p>Phone: +123-456-7890</p>
         <nav>
             <a href="index.html">Home</a>
             <a href="research.html">Research</a>
