--- a/research.html
+++ b/research.html
@@ -3,31 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research - Yuhang Li</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Yuhang Li</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: url('MVIMG_20230212_180228.jpg') no-repeat center center fixed;
+            background-size: cover;
+            color: #333;
+            line-height: 1.6;
+        }
+        header {
+            text-align: center;
+            padding: 2rem;
+            background-color: rgba(70, 130, 180, 0.8); /* Semi-transparent blue */
+            color: white;
+        }
+        header img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            margin-bottom: 1rem;
+        }
+        main {
+            padding: 2rem;
+            max-width: 800px;
+            margin: auto;
+            background: rgba(255, 255, 255, 0.9); /* Semi-transparent white */
+            border-radius: 1px;
+        }
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: #ffffff;
+            font-weight: bold;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background-color: rgba(70, 130, 180, 0.8);
+            color: white;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Research</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="research.html">Research</a>
-            <a href="cv.html">CV</a>
-        </nav>
-    </header>
     <main>
         <section>
-            <h2>Research Interests</h2>
-            <ul>
-                <li>Interest 1</li>
-                <li>Interest 2</li>
-                <li>Interest 3</li>
-                <li>Interest 4</li>
-            </ul>
+            <h2>Research</h2>
+            <p>Master's Thesis: Merger and Environmental Externality: A Case study of US Airlines</p>
         </section>
     </main>
     <footer>
-        &copy; 2024 Yuhang Li
+        &copy; 2024 mishimaaa
     </footer>
 </body>
 </html>
