--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <main>
         <section>
             <h2>About Me</h2>
-            <p>Welcome to my site! I am a first-year PhD at Utokyo, Graduate School of Economics. .</p>
+            <p>Welcome to my site! I am a first-year PhD at Utokyo, Graduate School of Economics. I am interested in airlines, EV and energy.</p>
         </section>
         <section>
             <h2>Research Interests</h2>
