--- a/cv.html
+++ b/cv.html
@@ -3,24 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV - Yuhang Li</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Yuhang Li</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: url('MVIMG_20230212_180228.jpg') no-repeat center center fixed;
+            background-size: cover;
+            color: #333;
+            line-height: 1.6;
+        }
+        header {
+            text-align: center;
+            padding: 2rem;
+            background-color: rgba(70, 130, 180, 0.8); /* Semi-transparent blue */
+            color: white;
+        }
+        header img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            margin-bottom: 1rem;
+        }
+        main {
+            padding: 2rem;
+            max-width: 800px;
+            margin: auto;
+            background: rgba(255, 255, 255, 0.9); /* Semi-transparent white */
+            border-radius: 1px;
+        }
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: #ffffff;
+            font-weight: bold;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background-color: rgba(70, 130, 180, 0.8);
+            color: white;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>Curriculum Vitae</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="research.html">Research</a>
-            <a href="cv.html">CV</a>
-        </nav>
+        <!-- Empty block for header -->
     </header>
     <main>
-        <p>You can download my CV using the link below:</p>
-        <a href="https://www.dropbox.com/s/your-file-link/cv_yuhang_li.pdf" target="_blank">Download CV</a>
+        <section>
+            <h2>Curriculum Vitae</h2>
+            <a href="https://www.dropbox.com/s/your-file-link/cv_yuhang_li.pdf" target="_blank">find my CV here</a>
+        </section>
     </main>
     <footer>
-        &copy; 2024 Yuhang Li
+        &copy; 2024 mishimaaa
     </footer>
 </body>
 </html>
