--- a/cv.html
+++ b/cv.html
@@ -60,7 +60,7 @@
     <main>
         <section>
             <h2>Curriculum Vitae</h2>
-            <a href="https://www.dropbox.com/s/your-file-link/cv_yuhang_li.pdf" target="_blank">find my CV here</a>
+            <a href="https://www.dropbox.com/scl/fi/u8ebmr3q5dh8avhj9a2hk/cv_phd_Li-Yuhang.pdf?rlkey=10dgkd57ygimcjhzr7rarv17q&st=cdw48b5b&dl=0" target="_blank">find my CV here</a>
         </section>
     </main>
     <footer>
