--- a/research.html
+++ b/research.html
@@ -64,6 +64,9 @@
     </main>
     <footer>
         &copy; 2024 mishimaaa
+        <p>
+            photo taken in Okinawa, Toyosaki Seaside Park, JP. 
+        </p>
     </footer>
 </body>
 </html>
