--- a/research.html
+++ b/research.html
@@ -63,10 +63,7 @@
         </section>
     </main>
     <footer>
-        &copy; 2024 mishimaaa
-        <p>
-            photo taken in Okinawa, Toyosaki Seaside Park, JP. 
-        </p>
+        &copy; 2024 mishimaaa photo taken in Okinawa, Toyosaki Seaside Park, JP. 
     </footer>
 </body>
 </html>
