--- a/research.html
+++ b/research.html
@@ -63,7 +63,8 @@
         </section>
     </main>
     <footer>
-        &copy; 2024 mishimaaa photo taken in Okinawa, Toyosaki Seaside Park, JP. 
+        &copy; 2024 mishimaaa<br>
+        Photo taken in Okinawa, Toyosaki Seaside Park, JP.
     </footer>
 </body>
 </html>
