--- a/research.html
+++ b/research.html
@@ -50,6 +50,7 @@
             position: fixed;
             bottom: 0;
             width: 100%;
+            font-size: 0.9 rem;
         }
     </style>
 </head>
