--- a/research.html
+++ b/research.html
@@ -13,6 +13,9 @@
             background-size: cover;
             color: #333;
             line-height: 1.6;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
         header {
             text-align: center;
@@ -32,6 +35,7 @@
             margin: auto;
             background: rgba(255, 255, 255, 0.9); /* Semi-transparent white */
             border-radius: 1px;
+            flex: 1;
         }
         nav a {
             margin: 0 15px;
@@ -45,12 +49,9 @@
         footer {
             text-align: center;
             padding: 1rem;
-            background-color: rgba(70, 130, 180, 0.8);
+            background-color: rgba(70, 130, 180, 0.8); /* Semi-transparent blue */
             color: white;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            font-size: 0.9 rem;
+            font-size: 0.9rem;
         }
     </style>
 </head>
