--- a/research.html
+++ b/research.html
@@ -65,8 +65,7 @@
         </section>
     </main>
     <footer>
-        &copy; 2024 mishimaaa<br>
-        Photo taken in Okinawa, Toyosaki Seaside Park, JP.
+        &copy; 2024 mishimaaa
     </footer>
 </body>
 </html>
