--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
         </section>
     </main>
     <footer>
-        &copy; 2024 mishimaaa. <br>
-        Photo taken in Okinawa, Toyosaki Seaside Park, JP.
+        &copy; 2024 mishimaaa
     </footer>
 </body>
 </html>
