--- a/cv.html
+++ b/cv.html
@@ -64,7 +64,8 @@
         </section>
     </main>
     <footer>
-        &copy; 2024 mishimaaa
+        &copy; 2024 mishimaaa <br>
+        Photo taken in Okinawa, Toyosaki Seaside Park, JP.
     </footer>
 </body>
 </html>
