--- a/research.html
+++ b/research.html
@@ -65,7 +65,7 @@
         </section>
         <section>
             <h2>Curriculum Vitae</h2>
-            <a href="https://www.dropbox.com/scl/fi/jo35p4mf4zk7t4fqhz0ji/writing-sample-Yuhang-Li-new.pdf?rlkey=sx2blo8pyygg4orfxusbfwlba&st=oo8bz461&dl=0">find my CV here</a>
+            <a href="https://www.dropbox.com/scl/fi/jo35p4mf4zk7t4fqhz0ji/writing-sample-Yuhang-Li-new.pdf?rlkey=sx2blo8pyygg4orfxusbfwlba&st=oo8bz461&dl=0">Link to Draft</a>
         </section>
     </main>
     <footer>
