--- a/research.html
+++ b/research.html
@@ -64,7 +64,7 @@
             <p>Master's Thesis: Merger and Environmental Externality: A Case study of US Airlines</p>
         </section>
         <section>
-            <h2>Curriculum Vitae</h2>
+            <h2>(Preliminary)Draft</h2>
             <a href="https://www.dropbox.com/scl/fi/jo35p4mf4zk7t4fqhz0ji/writing-sample-Yuhang-Li-new.pdf?rlkey=sx2blo8pyygg4orfxusbfwlba&st=oo8bz461&dl=0">Link to Draft</a>
         </section>
     </main>
