--- a/research.html
+++ b/research.html
@@ -63,10 +63,10 @@
             <h2>Research</h2>
             <p>Master's Thesis: Merger and Environmental Externality: A Case study of US Airlines</p>
         </section>
-        <!-- <section>
+         <section>
             <h2>(Preliminary)Draft</h2>
-            <a href="https://www.dropbox.com/scl/fi/jo35p4mf4zk7t4fqhz0ji/writing-sample-Yuhang-Li-new.pdf?rlkey=sx2blo8pyygg4orfxusbfwlba&st=oo8bz461&dl=0">Link to Draft</a>
-        </section> */ -->
+            <!--<a href="https://www.dropbox.com/scl/fi/jo35p4mf4zk7t4fqhz0ji/writing-sample-Yuhang-Li-new.pdf?rlkey=sx2blo8pyygg4orfxusbfwlba&st=oo8bz461&dl=0">Link to Draft</a>*/ -->
+        </section> 
     </main>
     <footer>
         &copy; 2024 mishimaaa
