--- a/cv.html
+++ b/cv.html
@@ -60,7 +60,7 @@
     <main>
         <section>
             <h2>Curriculum Vitae</h2>
-            <a href="https://www.dropbox.com/scl/fi/wcho0450njyw0mqxi95dn/cv-Yuhang-Li.pdf?rlkey=70brqvzdchb3iol1cqoqniyy9&st=v48zkwix&dl=0">find my CV here</a>
+            <a href="https://www.dropbox.com/scl/fi/glu4fpk0mls5pz74olit5/cv-complete-Yuhang-Li.pdf?rlkey=hns17kpcm2wsfvdtba9c2ylk7&st=l1m8g7ww&dl=0">find my CV here</a>
         </section>
     </main>
     <footer>
